--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -2,17 +2,22 @@ body {
   max-width: 100%;
   background-color: $background;
 
-  nav {
+  nav.navbar {
     background-color: transparent !important;
+
+    .navbar-toggler-icon {
+      color: $primary-green !important;
+    }
 
     .navbar-nav {
       .nav-link {
         font-size: 18px;
         font-weight: map-get($map: $fw, $key: regular);
         color: $text-grey !important;
-        margin-left: 25px;
+        margin-left: 30px;
       }
       .active {
+        font-weight: map-get($map: $fw, $key: medium);
         color: $primary-green !important;
         border-bottom: 2px;
         border-color: $primary-green;
