--- a/assets/scss/components/_text-styles.scss
+++ b/assets/scss/components/_text-styles.scss
@@ -10,6 +10,9 @@ p {
   font-size: 14px;
   font-weight: map-get($map: $fw, $key: regular);
   color: $text-dark;
+  @media only screen and (max-width: 600px) {
+    font-size: 12px;
+  }
 }
 
 h1 {
