--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -33,6 +33,12 @@
   color: #132039;
   background-color: #83d987;
 }
+@media only screen and (max-width: 600px) {
+  .btn-exploreNow {
+    padding: 8px 8px;
+    font-size: 12px;
+  }
+}
 
 p {
   margin-top: 20px;
@@ -47,6 +53,11 @@ p {
   font-weight: 400;
   color: #020b2a;
 }
+@media only screen and (max-width: 600px) {
+  .label-text {
+    font-size: 12px;
+  }
+}
 
 h1 {
   font-weight: 600;
@@ -59,16 +70,20 @@ body {
   max-width: 100%;
   background-color: #0f1837;
 }
-body nav {
+body nav.navbar {
   background-color: transparent !important;
 }
-body nav .navbar-nav .nav-link {
+body nav.navbar .navbar-toggler-icon {
+  color: #83d987 !important;
+}
+body nav.navbar .navbar-nav .nav-link {
   font-size: 18px;
   font-weight: 400;
   color: #9094a2 !important;
-  margin-left: 25px;
+  margin-left: 30px;
 }
-body nav .navbar-nav .active {
+body nav.navbar .navbar-nav .active {
+  font-weight: 500;
   color: #83d987 !important;
   border-bottom: 2px;
   border-color: #83d987;
@@ -100,39 +115,50 @@ body ::-ms-input-placeholder {
   color: #020b2a !important;
 }
 
-.hero-image {
-  max-width: 100%;
-}
 .hero-image img.hero-background {
-  width: 1440px;
-  z-index: -1;
+  max-width: 1200px;
+  z-index: -99;
   position: absolute;
+  overflow: hidden;
   top: 0;
 }
-@media only screen and (max-width: 600px) {
-  .hero-image img.hero-background {
-    width: 100%;
-  }
-}
 
-section.hero {
+section.hero, section.hero-v2 {
   padding-top: 100px;
 }
-section.hero .form-content {
+section.hero .form-content, section.hero-v2 .form-content, section.hero .form-content-v2, section.hero-v2 .form-content-v2 {
   margin-top: 60px;
   padding: 21px;
   background-color: #ffffff;
   border-radius: 7px;
   max-width: 713px;
 }
-section.hero .form-content input {
+section.hero .form-content input, section.hero-v2 .form-content input, section.hero .form-content-v2 input, section.hero-v2 .form-content-v2 input {
   border: none;
   border-radius: 7px;
   background-color: #f7f7f9;
   font-weight: 500;
 }
 @media only screen and (max-width: 600px) {
-  section.hero {
+  section.hero .form-content input, section.hero-v2 .form-content input, section.hero .form-content-v2 input, section.hero-v2 .form-content-v2 input {
+    font-size: 12px;
+  }
+}
+section.hero .form-content-v2, section.hero-v2 .form-content-v2 {
+  margin-top: 120px;
+}
+@media only screen and (max-width: 600px) {
+  section.hero, section.hero-v2 {
     padding-top: 75px;
   }
+}
+
+section.hero-v2 {
+  padding-top: 120px;
+}
+section.hero-v2 .arrow-img {
+  z-index: -1;
+  position: absolute;
+  margin-top: -130px;
+  margin-left: 830px;
 }/*# sourceMappingURL=main.css.map */
