--- a/assets/scss/components/_text-styles.scss
+++ b/assets/scss/components/_text-styles.scss
@@ -7,12 +7,9 @@ p {
 }
 
 .label-text {
-  font-size: 14px;
+  font-size: 14px !important;
   font-weight: map-get($map: $fw, $key: regular);
   color: $text-dark;
-  // @media only screen and (max-width: 600px) {
-  //   font-size: 12px;
-  // }
 }
 
 h1 {
