--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,6 +1,8 @@
-// components folder
 @import "components/fonts";
 @import "components/colors";
+// components folder
+@import "components/navbar1";
+@import "components/navbar2";
 @import "components/buttons";
 @import "components/text-styles";
 
